@startuml
!include style.iuml

class Artist {
}

class ArtistRepository {
}

interface PanacheRepository {
}

interface PanacheRepositoryBase {
  + default delete(Entity entity): void
  + default flush(): void
  + default isPersistent(Entity entity): boolean
  + default persist(Entity entity): void
  + default deleteAll(): long
  + default deleteById(Id id): boolean
  + default findById(Id id): Entity
  + default findByIdOptional(Id id): Entity
  + default persist(Iterable<Entity> entities): void
  + default persist(Stream<Entity> entities): void
  {method} ...
}

PanacheRepository <|-- ArtistRepository
PanacheRepositoryBase <|-- PanacheRepository
ArtistRepository -> Artist
@enduml
